# omnivoice-triton-server

./: .gitignore  README.md  omnivoice_triton_server_cli.py  pyproject.toml  requirements.txt
docs/: DEPLOYMENT.md  README.zh-CN.md  deployment.en.md  deployment.md  deployment.zh-CN.md  request.en.md  request.md  request.zh-CN.md
omnivoice-triton-server/: __init__.py  __main__.py  audio.py  inferer.py  launcher.py  metrics_shm.py  protocol.py  voices.py
omnivoice-triton-server/modeling/: __init__.py
omnivoice-triton-server/modeling/models/: omnivoice.py
omnivoice-triton-server/triton_backend/kernels/: rms_norm.py  swiglu.py
omnivoice-triton-server/triton_backend/models/: faster_runner.py  patching.py  triton_faster_runner.py
scripts/: install_systemd_service.sh  start_server.sh
src/: app.py  chunking.py  config.py  infer_client.py  inferer.py  launcher.py  logging_config.py  metrics_shm.py  protocol.py
src/modeling/data/: batching.py  dataset.py
src/modeling/models/: omnivoice.py
src/modeling/utils/: audio.py
src/triton_backend/: __init__.py
src/triton_backend/kernels/: __init__.py  fused_norm_residual.py
src/triton_backend/models/: __init__.py  base_runner.py  faster_runner.py  patching.py  triton_faster_runner.py  triton_runner.py
tests/: load_1000_rps100.py  test_api.py  test_chunking.py
