[project]
name = "omnivoice-triton-server"
version = "0.1.1"
description = "OpenAI-compatible OmniVoice server with batched multi-GPU Triton inferers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic>=2",
  "pydantic-settings>=2",
  "python-multipart",
  "httpx",
  "numpy",
  "regex",
  "jieba",
  "torch",
  "torchaudio",
  "soundfile",
  "triton",
  "transformers",
  "accelerate",
  "pydub",
  "concurrent-log-handler",
  "opencc-python-reimplemented",
]

[project.optional-dependencies]
flash = [
  "flash-attn",
]
sage = [
  "sageattention",
]
attn = [
  "flash-attn",
  "sageattention",
]

[project.scripts]
omnivoice-triton-server = "omnivoice_triton_server_cli:main"

[tool.ruff]
line-length = 100

[tool.setuptools]
py-modules = [
  "omnivoice_triton_server_cli",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
  "omnivoice-triton-server",
  "omnivoice-triton-server.*",
]
